Fixed bug #80422 (php_opcache.dll crashes when using Apache 2.4 with JIT)